--- a/src/components/widget/Widget.css
+++ b/src/components/widget/Widget.css
@@ -12,7 +12,7 @@
 }
 .indicator-container {
     display       : flex;
-    height: auto !important;
+    height: 100px;
     margin: 40px 20px 0px;
 }
 .widget-image{
@@ -27,3 +27,12 @@
     margin          : 0 auto;
     padding         : 10px;
 }
+/* Code added by Varun Bhandia */
+/* Will change the properties on mobile */
+@media screen and (max-width: 600px) {
+    .widget-container {
+        height: auto !important;
+    }
+  }
+
+/* Code ended */
